refactor: 개별 save, update 쿼리 batch 처리